# Algo-mipt-course

./: .clang-tidy  CMakeLists.txt
s01/: CMakeLists.txt
s01/c01/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp
s01/c02/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  F.cpp  G.cpp  G_2.cpp  H.cpp  I.cpp  J.cpp
s01/c03/: A.cpp  AVL.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp
s01/c04/: B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  test.cpp
s01/c05/: A.cpp  A_ref.cpp  B.cpp  C.cpp  CMakeLists.txt  G.cpp  H.cpp  J.cpp  L.cpp  M.cpp
s02/: CMakeLists.txt
s02/c01/: A.cpp  A2.cpp  B.cpp  C.cpp  C2.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  J.cpp
s02/c02/: A-B.cpp  B2.cpp  CMakeLists.txt  D-E.cpp  G.cpp
s02/c03/: B.cpp  C.cpp  C2.cpp  CMakeLists.txt  D.cpp  E.cpp  E2.cpp  F.cpp
s02/c04/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  DAS.cpp  G.cpp  G2.cpp
s02/c05/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  C_2.cpp  D.cpp
s02/capr/: A.cpp  CMakeLists.txt
s03/: CMakeLists.txt
s03/c02/: CMakeLists.txt  E.cpp  F.cpp  Fref.cpp
s03/c03/: A.cpp  CMakeLists.txt
