add_executable(c02_A A.cpp)
add_executable(c02_B B.cpp)
add_executable(c02_C C.cpp)
add_executable(c02_D D.cpp)
#add_executable(c02_E E.cpp)
add_executable(c02_F F.cpp)
add_executable(c02_G G.cpp)
add_executable(c02_G_2 G_2.cpp)
add_executable(c02_H H.cpp)
add_executable(c02_I I.cpp)
add_executable(c02_J J.cpp)
