add_executable(A A.cpp)
add_executable(A_ref A_ref.cpp)
add_executable(B B.cpp)
add_executable(C C.cpp)
#add_executable(D D.cpp)
#add_executable(E E.cpp)
#add_executable(F F.cpp)
add_executable(G G.cpp)
add_executable(H H.cpp)

add_executable(J J.cpp)
add_executable(L L.cpp)
add_executable(M M.cpp)

